# bubblescript

./: README.md  bubblescript.cabal  spicy-lisp.cabal
eg/: comments.bubble  hello.spicy
src/: Codegen.hs  Main.hs  Struct.hs
