cabal-version: 3.0
name: bubblescript
version: 0.1.0.0
-- synopsis:
-- description:
license-file:       LICENSE
author:             ellos0
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bubble
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    parsec,base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
